--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -4,9 +4,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Users</title>
 </head>
 <body>
-
+<th:block th:each="msg : ${messages}">
+    <h1 th:text="${msg}"></h1>
+</th:block>
 </body>
 </html>
