--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -7,7 +7,8 @@
     <title>Users</title>
 </head>
 <body>
-
+<h2>All users</h2>
+<br>
 <table>
     <tr>
         <th>ID</th>
@@ -28,8 +29,5 @@
 
 </table>
 
-<th:block th:each="msg : ${messages}">
-    <h1 th:text="${msg}"></h1>
-</th:block>
 </body>
 </html>
